<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context="com.cmsc355.ccnd.gymrat.SetGoals">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/Goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goal Name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/GoalName"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Message"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/messageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/setGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addGoal"
            android:text="Set Goal" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteGoal"
            android:text="Delete" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:id="@+id/deleteAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteAllGoals"
            android:text="Delete ALl" />
    </LinearLayout>

    <ListView
        android:id="@+id/goalList"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

</LinearLayout>