...
        tools:ignore="MissingConstraints"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/SetGoals"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="32dp"
        android:background="#000000"
        android:onClick="setGoalsClick"
        android:text="Set Goals"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalorieCounter" />

...
